syntax = "proto3";

package api;
option go_package = "github.com/rotationalio/api";

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesReply) {};
    rpc RequestVote(VoteRequest) returns (VoteReply) {};
}

// Invoked by leader to replicate log entries (5.3); also used as heartbeat (5.2).
// 
// Receiver implementation:
// 1. Reply false if term < currentTerm (§5.1)
// 2. Reply false if log doesn’t contain an entry at prevLogIndex
//    whose term matches prevLogTerm (§5.3)
// 3. If an existing entry conflicts with a new one (same index
//    but different terms), delete the existing entry and all that
//    follow it (§5.3)
// 4. Append any new entries not already in the log
// 5. If leaderCommit > commitIndex, set commitIndex =
//    min(leaderCommit, index of last new entry)
message AppendEntriesRequest {
    // The leader’s term.
    int32 term = 1;

    // So follower can redirect clients.
    string leaderId = 2;

    // index of log entry immediately preceding new ones.
    int32 prevLogIndex = 3;

    // term of prevLogIndex entry.
    int32 prevLogTerm = 4;

    // log entries to store (empty for heartbeat; may send more than one for efficiency)
    repeated string entries = 5;

    // leader’s commitIndex.
    int32 leaderCommit = 6;
}

message AppendEntriesReply {
    // currentTerm, for leader to update itself.
    int32 term = 1;

    // true if follower contained entry matching prevLogIndex and prevLogTerm.
    bool success = 2;
}

// Invoked by candidates to gather votes (§5.2).
// 
// Receiver implementation:
// 1. Reply false if term < currentTerm (§5.1)
// 2. If votedFor is null or candidateId, and candidate’s log is at
//    least as up-to-date as receiver’s log, grant vote (§5.2, §5.4)
message VoteRequest {
    // The candidates’ term.
    int32 term = 1;

    // The candidate requesting vote.
    string candidateId = 2;

    // index of candidate’s last log entry (5.4).
    int32 lastLogIndex = 3;

    // term of candidate’s last log entry (5.4).
    int32 lastLogTerm = 4;
}

message VoteReply {
    // currentTerm, for candidate to update itself.
    int32 term = 1;

    // true means candidate received vote
    bool voteGranted = 2;
}